Fix invisible font

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -339,7 +339,7 @@ md-sidenav.md-closed.md-locked-open-add-active.user_menu {
   // font-size: 72px;
   // background: -webkit-linear-gradient(#999, #fff);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  // -webkit-text-fill-color: transparent;
 }
 
 .x_large_font{
